Update for all dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,5 @@ version = "0.0.1"
 authors = ["Jon Black <jon_black@mm.st>"]
 
 [dependencies]
-sdl2 = "0.0.17"
-
-[dependencies.sdl2_image]
-git = "https://github.com/xsleonard/rust-sdl2_image"
+sdl2 = "*"
+sdl2_image = "*"
